# LOLZTEAM

./: LICENSE  Lolz_lib.py  LolzteamApi.py  README.md  example.py  main.py  setup.py
.github/: FUNDING.yml
Documentation/: Antipublic.md  BBCODE.md  DelaySynchronizer.md  Forum.md  Market.md
DocumentationOfficial/: Antipublic.json  Forum.json  Market.json
Examples/: example.py  example_contests.py  example_market.py
LOLZTEAM/: API.py  AutoUpdate.py  BBCODE.py  Constants.py  Exceptions.py  Tweaks.py  Utils.py  __init__.py  models.py
LOLZTEAM/Documentation/: Antipublic.md  BBCODE.md  DelaySync.md  Forum.md  Market.md  Utils.md  antipublic.md
LolzteamApi/: AntipublicApi.py  BBCODE.py  DelaySynchronizer.py  LolzteamApi.py  Types.py  __init__.py  check_updates.py  main.py
Official Docs/: antipublic.json  forum.json  market.json
Official Documentation/: forum.json  market.json
Package/: pyproject.toml
Package/LOLZTEAM/: __init__.py
Package/LOLZTEAM/Client/: Antipublic.py  Forum.py  Market.py  __init__.py
Package/LOLZTEAM/Client/Base/: Constants.py  Core.py  Exceptions.py  Wrappers.py  __init__.py
