[project]
name = "lolzteam"
version = "2.0.18"
description = "Python API Client for https://lolz.live/ & https://lzt.market/ & https://antipublic.one/"
authors = [
    {name = "AS7RID", email = "lolzteam@furrygaysex.anonaddy.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx[socks]"
]
keywords = ["LZT", "LOLZ", "LOLZTEAM", "ZELENKA", "API", "Client", "Market", "Forum", "Antipublic"]

[project.urls]
homepage = "https://lolz.live/threads/5523020/"
repository = "https://github.com/AS7RIDENIED/LOLZTEAM"
documentation = "https://github.com/AS7RIDENIED/LOLZTEAM/tree/main/Documentation"
"Bug Tracker" = "https://github.com/AS7RIDENIED/LOLZTEAM/issues"

[build-system]
requires = ["uv_build >= 0.9.5"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "LOLZTEAM"
